<resources>
    <string name="app_name">Fishing Manager Service</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="invalid_account">Tai khoan nay bi loi. Vui long nhap lai hoac thu voi tai khoan khac!</string>
    <string name="action_error">Luu du lieu khong thanh cong!</string>
    <string name="fishing_status">Khach nay dang tham gia cau!</string>

    <string name="number_fishing">Ma So</string>
    <string name="fullname">Ten KH</string>
    <string name="mobile">Mobile</string>
    <string name="date_in">Gio Vao</string>
    <string name="date_out">Gio ra</string>
    <string name="feed_type">Moi Cau (Ca chep)</string>
    <string name="keep_hours">Gui Gio</string>
    <string name="no_keep_hours">Tra Gio</string>
    <string name="total_hours">Tong Gio</string>
    <string name="keep_fish">Gui Ca (kg)</string>
    <string name="take_fish">Lay Ca (kg)</string>
    <string name="total_fish">Tong Ca</string>
    <string name="total_money">Tong Tien</string>
    <string name="note">Ghi Chu</string>
    <string name="package_fishing">Suat (Gio)</string>
    <string name="price">Gia Ca</string>
    <string name="action_submit_short">OK</string>
    <string name="error_invalid_mobile">Mobile qua ngan, it nhat la 4 so</string>
    <string name="yes">Co</string>
    <string name="no">Khong</string>
    <string name="update_status">Cap Nhat Khach Hang</string>
    <string name="fee_do_fish">Phi Lam Ca</string>
    <string name="total_all">Tong</string>
    <string name="log">Lich Su</string>
    <string name="buy_fish">Mua Ca</string>

    <string name="customer_manager">Quan ly khach hang</string>
    <string name="report">Bao cao</string>
    <string name="add_customer">Them KH</string>
    <string name="logout">Thoat</string>
    <string name="settings">Cai Dat</string>

    <string name="table_original">Table Original</string>
    <string name="table_basic">Table Basic</string>
    <string name="table_original_sortable">Table Original Sortable</string>
    <string name="order_sections_asc">Order sections ASC</string>
    <string name="title_activity_add_new_customer">Them Khach Hang</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>
</resources>
