<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fishing.namtran.fishingmanagerservice.ManagerCustomerActivity">

    <item
        android:id="@+id/customer_manager"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/customer_manager"/>

    <item
        android:id="@+id/report"
        android:orderInCategory="2"
        app:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_menu_report_image"
        android:title="@string/report"/>
    <item
        android:id="@+id/add_customer"
        android:orderInCategory="1"
        app:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/add_customer"/>

    <item
        android:id="@+id/table_basic"
        android:orderInCategory="100"
        android:title="@string/table_basic"
        app:showAsAction="never" />
    <item
        android:id="@+id/table_original"
        android:orderInCategory="101"
        android:title="@string/table_original"
        app:showAsAction="never" />

    <item
        android:id="@+id/table_original_sortable"
        android:orderInCategory="102"
        android:title="@string/table_original_sortable"
        app:showAsAction="never" />
</menu>
